--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/rardev/social-app#readme",
   "devDependencies": {
     "electron": "^17.0.1"
+  },
+  "dependencies": {
+    "express": "^4.17.3"
   }
 }
