--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "electron": "^17.0.1"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "nedb": "^1.8.0"
   }
 }
